--- a/css/styles.css
+++ b/css/styles.css
@@ -81,12 +81,12 @@ Lists
 ========================================================================== */
 /* * Addresses margins set differently in IE 6/7. */
 
-dl, menu, ol, ul { margin: 1em 0; }
+/*dl, menu, ol, ul { margin: 1em 0; }
 dd { margin: 0 0 0 40px; }
 /* * Addresses paddings set differently in IE 6/7. */
-menu, ol, ul { padding: 0 0 0 40px; }
+/*menu, ol, ul { padding: 0 0 0 40px; }
 /* * Corrects list images handled incorrectly in IE 7. */
-nav ul, nav ol { list-style: none; list-style-image: none; }
+/*nav ul, nav ol { list-style: none; list-style-image: none; }
 /* ==========================================================================
 Embedded content
 ========================================================================== */
@@ -190,7 +190,7 @@ h2::after { content: " "; border: solid 2px #3dc9b3; display: block; width: 35px
 /* ==========================================================================
 Navigation
 ========================================================================== */
-nav { background-color: #242830; margin-top: -1px; }
+/*nav { background-color: #242830; margin-top: -1px; }
 nav ul { list-style: none; padding: 0; }
 nav ul li { color: rgba(255, 255, 255, 0.6); display: block; border-bottom: 1px dotted rgba(255, 255, 255, 0.2); transition: all 0.5s ease; -moz-transition: all 0.5s ease; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; padding-left: 0; position: relative; }
 nav ul li:last-child { border: none; }
@@ -218,8 +218,8 @@ Hero
     clear: right;}
 .hero h1 span { color: #676767; display: inline-block; float:right; text-align:right; }
 .hero p { letter-spacing: 1px; }
-/*.learn-more-btn { background: #660000; padding: 20px 40px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -o-border-radius: 5px; color: #fff; text-transform: uppercase; letter-spacing: 1px; display: inline-block; -webkit-box-shadow: 0px 3px 0px 0px #4d0000; -moz-box-shadow: 0px 3px 0px 0px #4d0000; box-shadow: 0px 3px 0px 0px #4d0000; margin: 40px 0 0; font-weight: bold; opacity: .85; }
-.learn-more-btn:hover, .learn-more-btn:focus { background: #390000; color: #fff; }
+.resume-btn { background: #660000; padding: 20px 40px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -o-border-radius: 5px; color: #fff; text-transform: uppercase; letter-spacing: 1px; display: inline-block; -webkit-box-shadow: 0px 3px 0px 0px #4d0000; -moz-box-shadow: 0px 3px 0px 0px #4d0000; box-shadow: 0px 3px 0px 0px #4d0000; margin: 40px 0 0; font-weight: bold; opacity: .85; }
+.resume-btn:hover, .resume-btn:focus { background: #390000; color: #fff; }
 /* ==========================================================================
 Intro
 ========================================================================== */
