--- a/css/styles.css
+++ b/css/styles.css
@@ -212,14 +212,20 @@ nav ul li a:hover, nav ul li a:focus { text-decoration: none; color: rgba(255, 2
 /* ==========================================================================
 Hero
 ========================================================================== */
+.resume-btn { background: #4D0000; position: absolute; top: 48%;
+    left: 80%;transition: .5s ease; padding: 20px 40px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -o-border-radius: 5px; color: #fff; text-transform: uppercase; letter-spacing: 1px; display: inline-block; -webkit-box-shadow: 0px 3px 0px 0px #4d0000; -moz-box-shadow: 0px 3px 0px 0px #4d0000; box-shadow: 0px 3px 0px 0px #4d0000; margin: 40px 0 0; font-weight: bold; opacity: .85;}
+
+.resume-btn:hover, .resume-btn:focus { background: #390000; color: #fff; }
+
 .hero { background: url('../img/venice.jpg') no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; padding: 65px 0 750px 0; height: auto; }
-.hero h1 { font-size: 50px; letter-spacing: 10px; margin: 0px; text-align:right; float:right; padding-left: 175px;}
+
+.hero h1 { font-size: 50px; letter-spacing: 10px; margin: 0px; text-align:right; padding-left: 175px;}
+
 .after-hero {
     clear: right;}
-.hero h1 span { color: #676767; display: inline-block; float:right; text-align:right; }
+.hero h1 span { color: #676767; display: inline-block; float:right; text-align:right; position: relative; bottom: 10px;}
 .hero p { letter-spacing: 1px; }
-.resume-btn { background: #660000; padding: 20px 40px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -o-border-radius: 5px; color: #fff; text-transform: uppercase; letter-spacing: 1px; display: inline-block; -webkit-box-shadow: 0px 3px 0px 0px #4d0000; -moz-box-shadow: 0px 3px 0px 0px #4d0000; box-shadow: 0px 3px 0px 0px #4d0000; margin: 40px 0 0; font-weight: bold; opacity: .85; }
-.resume-btn:hover, .resume-btn:focus { background: #390000; color: #fff; }
+
 /* ==========================================================================
 Intro
 ========================================================================== */
