--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ Base
 *    user zoom. */
 
 html { font-size: 100%; /* 1 */
-	-webkit-text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 -ms-text-size-adjust: 100%; /* 2 */ }
 html, html a { -webkit-font-smoothing: antialiased; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004); }
 /* * Addresses `font-family` inconsistency between `textarea` and other form
@@ -115,14 +115,14 @@ fieldset { border: 1px solid #c0c0c0; margin: 0 2px; padding: 0.35em 0.625em 0.7
 * 2. Corrects text not wrapping in Firefox 3.
 * 3. Corrects alignment displayed oddly in IE 6/7. */
 legend { border: 0; /* 1 */
-	padding: 0; white-space: normal; /* 2 */
+  padding: 0; white-space: normal; /* 2 */
 *margin-left: -7px; /* 3 */ }
 /* * 1. Corrects font size not being inherited in all browsers.
 * 2. Addresses margins set differently in IE 6/7, Firefox 3+, Safari 5, *    and Chrome.
 * 3. Improves appearance and consistency in all browsers. */
 button, input, select, textarea { font-size: 100%; /* 1 */
-	margin: 0; /* 2 */
-	vertical-align: baseline; /* 3 */
+  margin: 0; /* 2 */
+  vertical-align: baseline; /* 3 */
 *vertical-align: middle; /* 3 */ }
 /* * Addresses Firefox 3+ setting `line-height` on `input` using ` !important` in
 * the UA stylesheet. */
@@ -136,7 +136,7 @@ button, input { line-height: normal; }
 *    Known issue:inner spacing remains in IE 6. */
 button, html input[type="button"], /* 1 */
 input[type="reset"], input[type="submit"] { -webkit-appearance: button; /* 2 */
-	cursor: pointer; /* 3 */
+  cursor: pointer; /* 3 */
 *overflow: visible; /* 4 */ }
 /* * Re-set default cursor for disabled elements. */
 button[disabled], input[disabled] { cursor: default; }
@@ -145,14 +145,14 @@ button[disabled], input[disabled] { cursor: default; }
 * 3. Removes excess padding in IE 7.
 *    Known issue:excess padding remains in IE 6. */
 input[type="checkbox"], input[type="radio"] { box-sizing: border-box; /* 1 */
-	padding: 0; /* 2 */
-	*height: 13px; /* 3 */
+  padding: 0; /* 2 */
+  *height: 13px; /* 3 */
 *width: 13px; /* 3 */ }
 /* * 1. Addresses `appearance` set to `searchfield` in Safari 5 and Chrome.
 * 2. Addresses `box-sizing` set to `border-box` in Safari 5 and Chrome
 *    (include `-moz` to future-proof). */
 input[type="search"] { -webkit-appearance: textfield; /* 1 */
-	-moz-box-sizing: content-box; -webkit-box-sizing: content-box; /* 2 */
+  -moz-box-sizing: content-box; -webkit-box-sizing: content-box; /* 2 */
 box-sizing: content-box; }
 /* * Removes inner padding and search cancel button in Safari 5 and Chrome
 * on OS X. */
@@ -187,39 +187,15 @@ h2::after { content: " "; border: solid 2px #3dc9b3; display: block; width: 35px
 .wrapper { height: 650px; }
 .nopadding { padding: 0; }
 .inner { padding-top: 170px; }
-/* ==========================================================================
-Navigation
-========================================================================== */
-/*nav { background-color: #242830; margin-top: -1px; }
-nav ul { list-style: none; padding: 0; }
-nav ul li { color: rgba(255, 255, 255, 0.6); display: block; border-bottom: 1px dotted rgba(255, 255, 255, 0.2); transition: all 0.5s ease; -moz-transition: all 0.5s ease; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; padding-left: 0; position: relative; }
-nav ul li:last-child { border: none; }
-nav ul li a { color: rgba(255, 255, 255, 0.6); display: block; padding: 20px; transition: all 0.5s ease; -moz-transition: all 0.5s ease; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; padding-left: 0; position: relative; }
-nav ul li a:hover, nav ul li a:focus { text-decoration: none; color: rgba(255, 255, 255, 1); }
-#nav-toggle { position: absolute; right: 15px; top: 0; }
-#nav-toggle { cursor: pointer; padding: 10px 35px 16px 0px; }
-#nav-toggle span, #nav-toggle span:before, #nav-toggle span:after { cursor: pointer; border-radius: 1px; -moz-border-radius: 1px; -webkit-border-radius: 1px; -o-border-radius: 1px; height: 5px; width: 35px; background: #353535; position: absolute; display: block; content: ''; }
-#nav-toggle span:before { top: -10px; }
-#nav-toggle span:after { bottom: -10px; }
-#nav-toggle span, #nav-toggle span:before, #nav-toggle span:after { transition: all 500ms ease-in-out; -webkit-transition: all 500ms ease-in-out; -moz-transition: all 500ms ease-in-out; -o-transition: all 500ms ease-in-out; }
-#nav-toggle.active span { background-color: transparent; }
-#nav-toggle.active span:before, #nav-toggle.active span:after { top: 0; }
-#nav-toggle.active span:before { transform: rotate(45deg); -webkit-transform: rotate(45deg); -ms-transform: rotate(45deg); }
-#nav-toggle.active span:after { transform: translateY(-10px) rotate(-45deg); -webkit-transform: translateY(-10px) rotate(-45deg); -ms-transform: translateY(-10px) rotate(-45deg); top: 10px; }
-.navicon { position: relative; height: 26px; }
-.indicator { position: absolute; right: 0 !important; }
-.pull { display: none; }
+
 /* ==========================================================================
 Hero
 ========================================================================== */
-.resume-btn { background: #4D0000; position: absolute; top: 48%;
-    left: 80%;transition: .5s ease; padding: 20px 40px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -o-border-radius: 5px; color: #fff; text-transform: uppercase; letter-spacing: 1px; display: inline-block; -webkit-box-shadow: 0px 3px 0px 0px #4d0000; -moz-box-shadow: 0px 3px 0px 0px #4d0000; box-shadow: 0px 3px 0px 0px #4d0000; margin: 40px 0 0; font-weight: bold; opacity: .85;}
+.resume-btn:hover {background-color: #390000; color: white;}
 
-.resume-btn:hover, .resume-btn:focus { background: #390000; color: #fff; }
+.hero { background: url('../img/venice.jpg') no-repeat center center; background-size: cover; padding: 65px 0 750px 0; height: auto; }
 
-.hero { background: url('../img/venice.jpg') no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; padding: 65px 0 750px 0; height: auto; }
-
-.hero h1 { font-size: 50px; letter-spacing: 10px; margin: 0px; text-align:right; padding-left: 175px;}
+.hero h1 { font-size: 50px; letter-spacing: 10px; margin: 0px; text-align:left; padding-left: 175px;}
 
 .after-hero {
     clear: right;}
@@ -232,102 +208,25 @@ Intro
 .intro { background: #f3f5f8; }
 .intro p { margin: 50px 0 0; }
 h1.arrow { font-size: 15px; text-transform: uppercase; color: #353535; letter-spacing: 1px; background: url('../img/h1-bg.png') no-repeat center bottom; padding-bottom: 30px; font-weight: bold; }
+
 /* ==========================================================================
-Features
+Navigation
 ========================================================================== */
-/* .features-wrapper, .team-wrapper { margin: 70px 0 0; }
-.shadow { text-shadow: rgb(55, 181, 161) 1px 1px, rgb(55, 181, 161) 2px 2px, rgb(55, 181, 161) 3px 3px, rgb(55, 181, 161) 4px 4px, rgb(55, 181, 161) 5px 5px, rgb(55, 181, 161) 6px 6px, rgb(55, 181, 161) 7px 7px, rgb(55, 181, 161) 8px 8px, rgb(55, 181, 161) 9px 9px, rgb(55, 181, 161) 10px 10px, rgb(55, 181, 161) 11px 11px, rgb(55, 181, 161) 12px 12px, rgb(55, 182, 162) 13px 13px, rgb(55, 183, 163) 14px 14px, rgb(56, 184, 164) 15px 15px, rgb(56, 185, 165) 16px 16px, rgb(56, 186, 166) 17px 17px, rgb(57, 187, 167) 18px 18px, rgb(57, 188, 168) 19px 19px, rgb(57, 189, 169) 20px 20px, rgb(58, 191, 170) 21px 21px, rgb(58, 192, 171) 22px 22px, rgb(58, 193, 172) 23px 23px, rgb(59, 194, 173) 24px 24px, rgb(59, 195, 174) 25px 25px, rgb(59, 196, 175) 26px 26px, rgb(60, 197, 176) 27px 27px, rgb(60, 198, 177) 28px 28px, rgb(60, 199, 178) 29px 29px, rgb(61, 201, 179) 30px 30px; }
-.icon { height: 175px; width: 175px; line-height: 175px; max-width: 100%; background: #3dc9b3; border-radius: 50%; -o-border-radius: 50%; -moz-border-radius: 50%; -webkit-border-radius: 50%; display: block; color: #fff; font-size: 55px; text-align: center; vertical-align: middle; position: relative; margin: 0 auto 50px; }
-/* ==========================================================================
-iPhone Section
-========================================================================== */
-/* .iphone { width: 50%; background: #f3f5f8; float: left; height: 100%; box-shadow: inset -15px -11px 40px -6px rgba(0, 0, 0, 0.1); -moz-box-shadow: inset -15px -11px 40px -6px rgba(0, 0, 0, 0.1); -webkit-box-shadow: inset -15px -11px 40px -6px rgba(0, 0, 0, 0.1); z-index: 1; }
-.fluid-white { width: 50%; background: #fff; float: right; height: 100%; z-index: 2; }
-.responsive-services { position: relative; }
-/* ==========================================================================
-Swag
-========================================================================== */
-/* .swag { background: url('../img/plants-bg.jpg') no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; background-attachment: fixed; padding: 50px 0; }
-.swag h1 { color: #fff; font-size: 40px; text-transform: uppercase; letter-spacing: 5px; }
-.swag h1 span { display: block; font-size: 25px; margin-top: 20px; }
-.down-arrow-btn { width: 40px; height: 40px; border-radius: 50%; -moz-border-radius: 50%; -webkit-border-radius: 50%; -o-border-radius: 50%; background: rgba(61, 201, 179, 0.8); display: inline-block; margin: 10px auto 20px; color: #fff; font-size: 16px; line-height: 40px; text-align: center; }
-.down-arrow-btn:hover, .down-arrow-btn:focus { color: #fff; background: rgba(61, 201, 179, 1); }
-/* ==========================================================================
-Portfolio
-========================================================================== */
-/* .effects { padding-left: 15px; }
-.effects .img { position: relative; margin-bottom: 50px; position: relative; z-index: 1; overflow: hidden; }
-.effects .img:nth-child(n) { margin-right: 5px; }
-.effects .img:first-child { margin-left: -15px; }
-.effects .img:last-child { margin-right: 0; }
-.effects .img img { display: block; margin: 0; padding: 0; height: auto; }
-.overlay { display: block; position: absolute; z-index: 20; background: rgba(100, 194, 158, 0.8); overflow: hidden; transition: all 0.5s; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -o-transition: all 0.5s; }
-a.close-overlay { display: block; position: absolute; top: 0; right: 0; z-index: 100; width: 45px; height: 45px; font-size: 20px; font-weight: 700; color: #fff; line-height: 45px; text-align: center; background-color: #000; cursor: pointer; }
-a.close-overlay.hidden { display: none; }
-a.expand { display: block; position: absolute; z-index: 100; text-align: center; color: #fff; font-weight: 600; font-size: 14px; text-transform: uppercase; line-height: 30px; }
-.overlay-effect .img i { font-size: 30px; }
-.overlay-effect .overlay { bottom: 0; left: 0; right: 0; width: 100%; height: 100%; opacity: 0; }
-.overlay-effect .overlay a.expand { left: 0; right: 0; bottom: 47%; margin: 0 auto -30px auto; }
-.overlay-effect .img.hover .overlay { height: 100%; opacity: 1; }
-.img img { width: -webkit-calc(100% + 40px) !important; width: calc(100% + 40px) !important; -webkit-transition: opacity 0.35s, -webkit-transform 0.35s; transition: opacity 0.35s, transform 0.35s; -moz-transition: opacity 0.35s, -moz-transform 0.35s; -o-transition: opacity 0.35s, -o-transform 0.35s; -webkit-transform: translate3d(-40px, 0, 0); transform: translate3d(-40px, 0, 0); -ms-transform: translate3d(-40px, 0, 0); }
-.img:hover img { -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); -ms-transform: translate3d(-40px, 0, 0); }
-.designs { position: absolute; left: 0; right: 0; margin-left: auto; margin-right: auto; top: 50px; }
-/* ==========================================================================
-Subscribe
-========================================================================== */
-/* .subscribe { background: url('../img/keyboard-bg.jpg') no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; background-attachment: fixed; padding: 120px 0 140px; }
-.subscribe h1 { color: #fff; margin-bottom: 40px; }
-.subscribe h1 span { display: block; font-size: 15px; text-transform: uppercase; font-weight: bold; margin-top: 20px; letter-spacing: 1px; }
-.subscribe input[type=text] { background-color: rgba(255, 255, 255, 0.1); border: solid 1px #fff; padding: 20px; width: 30%; color: #fff; }
-.subscribe input[type=submit] { background: rgba(61, 201, 179, 0.5); border: solid 1px rgba(61, 201, 179, 0.5); padding: 20px; color: #fff; text-transform: uppercase; letter-spacing: 1px; transition: all 0.5s ease; -moz-transition: all 0.5s ease; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; }
-.subscribe input[type=submit]:hover { background: rgba(61, 201, 179, 1); border: solid 1px rgba(61, 201, 179, 1); color: #fff; }
-/* ==========================================================================
-CTA
-========================================================================== */
-/* .ignite-cta { background-color: #242830; padding: 70px 0; }
-.ignite-btn { display: inline-block; padding: 25px 40px; color: #fff; border: solid 1px #fff; text-transform: uppercase; font-weight: bold; letter-spacing: 1px; }
-.ignite-btn:hover, .ignite-btn:focus { color: #3dc9b3; border: solid 1px #3dc9b3; }
-/* ==========================================================================
-Team
-========================================================================== */
-/* .team img { margin-bottom: 40px; }
-ul.social-buttons { list-style: none; margin: 0; padding: 0; }
-ul.social-buttons li { display: inline-block; margin-right: 10px; }
-ul.social-buttons li:last-child { margin-right: 0; }
-.social-btn { width: 40px; height: 40px; border-radius: 50%; -moz-border-radius: 50%; -webkit-border-radius: 50%; -o-border-radius: 50%; background: #242830; display: inline-block; color: #fff; font-size: 17px; line-height: 40px; text-align: center; }
-.social-btn:hover, .social-btn:focus { background: #3dc9b3; color: #fff; }
-.social { margin-top: 25px }
-/* ==========================================================================
-Contact
-========================================================================== */
-/* .up-btn { width: 50px; height: 50px; border-radius: 50%; -moz-border-radius: 50%; -webkit-border-radius: 50%; -o-border-radius: 50%; background: rgba(61, 201, 179, 0.5); display: block; margin: 0 auto; color: #fff; font-size: 18px; line-height: 46px; text-align: center; position: absolute; top: -26px; left: 0; right: 0; margin-left: auto; margin-right: auto; }
-.up-btn:hover, up-btn:focus { color: #fff; background: rgba(61, 201, 179, 1); }
-.contact-details { margin: 70px 0; }
-.contact-details h2 { font-size: 20px; }
-.contact-details h2 span { display: block; color: #3dc9b3; text-transform: uppercase; letter-spacing: 1px; font-size: 14px; margin-top: 15px; }
-.contact-wrap { position: relative; }
-/* ==========================================================================
-Footer
-========================================================================== */
-/* footer a { color: #a1a9b0; }
-footer { background-color: #242830; padding: 40px 0 30px; }
-footer p { color: #fff; }
-ul.legals { list-style: none; color: #fff; line-height: 25px; }
-ul.legals li { display: inline-block; }
-ul.legals li::after { content: " |"; }
-ul.legals li:last-child::after { content: ""; }
-.legals { text-align: left; }
-.credit { text-align: right; }
-/* ==========================================================================
-FlexSlider Custom CSS
-========================================================================== */
-/* #servicesSlider { margin-top: 70px; }
-ul.slides li { margin-bottom: 20px; }
-/* ==========================================================================
-Waypoints
-========================================================================== */
-/* .wp1, .wp2, .wp3, .wp4, .wp5, .wp6 { visibility: hidden; }
-.bounceInLeft, .bounceInRight, .fadeInUp, .fadeInUpDelay, .fadeInDown, .fadeInUpD, .fadeInLeft, .fadeInRight { visibility: visible; }
-.delay-05s { animation-delay: 0.5s; -webkit-animation-delay: 0.5s; }
-.delay-1s { animation-delay: 1s; -webkit-animation-delay: 1s; }
-.wp3 { background: url('../img/iphone-bg.png') no-repeat center center; background-position: 200px 10px; height: 100%; }
+.btn_link {
+    position: relative;
+    top: 20px;
+    left: 90%;
+    float: left;
+}
+.btn_git {
+    position: relative;
+    top: 20px;
+    left: 80%;
+    float: left;
+}
+.btn_res {
+    position: relative;
+    top: 20px;
+    left: 70%;
+    float: left;
+}
