--- a/css/styles.css
+++ b/css/styles.css
@@ -216,14 +216,24 @@ Navigation
     position: relative;
     top: 20px;
     left: 90%;
+    float: left;
+    text-align: center;
+    overflow:hidden;
 }
 .btn_git {
     position: relative;
     top: 20px;
     left: 80%;
+    float: left;
+    text-align: center;
+    overflow:hidden;
 }
 .btn_res {
     position: relative;
     top: 20px;
     left: 70%;
+    float: left;
+    text-align: center;
+    overflow:hidden;
 }
+
